@@ -27,7 +27,7 @@ import co.syscoop.soberano.util.SpringUtility;
 
 @Order(7)
 
-//@Disabled
+@Disabled
 
 @TestMethodOrder(OrderAnnotation.class)
 class O7_CostCenterTest_record extends CostCenterActionTest {
@@ -98,11 +98,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1006));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw7");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1007));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1007));		
 						
 			clickOnRecordButton(desktop);
 			
@@ -134,7 +134,7 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw7");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1007));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1007));		
 						
 			clickOnRecordButton(desktop);
 			
@@ -166,7 +166,7 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1006));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1006));		
 						
 			clickOnRecordButton(desktop);
 			
@@ -198,11 +198,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1006));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw7");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1007));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1007));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -232,11 +232,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw7");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1007));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1007));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw8");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1008));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1008));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -266,11 +266,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw8");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1008));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1008));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1009));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1009));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -300,11 +300,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1009));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw10");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1010));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1010));
 			
 			clickOnRecordButton(desktop);
 			
@@ -336,11 +336,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1009));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw10");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1010));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1010));
 			
 			clickOnRecordButton(desktop);
 			
@@ -372,11 +372,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1009));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw10");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1010));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1010));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -406,11 +406,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw10");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1010));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1010));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw10");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1010));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1010));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -440,11 +440,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw10");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1010));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1010));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1006));
 			
 			clickOnRecordButton(desktop);
 			
@@ -476,11 +476,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw10");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1010));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1010));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1006));
 						
 			clickOnRecordButton(desktop);
 		}
@@ -510,11 +510,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1006));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw7");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1007));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1007));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -544,11 +544,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw7");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1007));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1007));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw8");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1008));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1008));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -578,11 +578,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw8");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1008));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1008));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1009));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1009));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -612,11 +612,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1009));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1009));
 			
 			clickOnRecordButton(desktop);
 			
@@ -648,11 +648,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1009));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1009));
 			
 			clickOnRecordButton(desktop);
 			
@@ -684,11 +684,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1009));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1009));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw9");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1009));		
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1009));		
 						
 			clickOnRecordButton(desktop);
 		}
@@ -718,11 +718,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1006));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1006));
 			
 			clickOnRecordButton(desktop);
 			
@@ -754,11 +754,11 @@ class O7_CostCenterTest_record extends CostCenterActionTest {
 			
 			InputAgent cmbInputWarehouseInputAgent = cmbInputWarehouseAgent.as(InputAgent.class);
 			cmbInputWarehouseInputAgent.typing("mw6");
-			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), new Integer(1006));
+			costCenterForm.setComponentValue(costCenterForm.getCmbInputWarehouse(), Integer.valueOf(1006));
 			
 			InputAgent cmbOutputWarehouseInputAgent = cmbOutputWarehouseAgent.as(InputAgent.class);
 			cmbOutputWarehouseInputAgent.typing("mw7");
-			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), new Integer(1007));
+			costCenterForm.setComponentValue(costCenterForm.getCmbOutputWarehouse(), Integer.valueOf(1007));
 			
 			clickOnRecordButton(desktop);
 			
