@@ -37,7 +37,7 @@ import co.syscoop.soberano.util.SpringUtility;
 
 @Order(11)
 
-//@Disabled
+@Disabled
 
 @TestMethodOrder(OrderAnnotation.class)
 class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
@@ -89,12 +89,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -105,7 +105,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -149,7 +149,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -160,7 +160,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -204,7 +204,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getDecQuantity(), new BigDecimal(1.000001));
 			materialExpenseForm.selectComboitemByValueForcingLabel(materialExpenseForm.getCmbUnit(), "2", "kg : kilogram");
@@ -213,7 +213,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -257,12 +257,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -272,7 +272,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -316,12 +316,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -331,7 +331,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -375,12 +375,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -390,7 +390,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -434,12 +434,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -498,12 +498,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -514,7 +514,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -558,12 +558,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -574,7 +574,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -618,12 +618,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -634,7 +634,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -678,12 +678,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -694,7 +694,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -738,12 +738,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -754,7 +754,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -798,12 +798,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -814,7 +814,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -858,12 +858,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -874,7 +874,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -918,12 +918,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -934,7 +934,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -976,12 +976,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -992,7 +992,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1036,12 +1036,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1052,7 +1052,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1096,12 +1096,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1112,7 +1112,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1154,12 +1154,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1170,7 +1170,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1214,12 +1214,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1230,7 +1230,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1274,12 +1274,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1290,7 +1290,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1334,12 +1334,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1350,7 +1350,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1392,12 +1392,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1408,7 +1408,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1452,12 +1452,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1468,7 +1468,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1510,12 +1510,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1526,7 +1526,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1570,12 +1570,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1586,7 +1586,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1632,12 +1632,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1648,7 +1648,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1690,12 +1690,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1706,7 +1706,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1750,12 +1750,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1766,7 +1766,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1808,12 +1808,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1824,7 +1824,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -1868,12 +1868,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1884,7 +1884,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1928,12 +1928,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -1944,7 +1944,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -1988,12 +1988,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2004,7 +2004,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -2048,12 +2048,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2064,7 +2064,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -2108,12 +2108,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2124,7 +2124,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -2168,12 +2168,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2184,7 +2184,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -2228,12 +2228,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2244,7 +2244,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -2288,12 +2288,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2304,7 +2304,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -2346,12 +2346,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2362,7 +2362,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -2406,12 +2406,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2422,7 +2422,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -2466,12 +2466,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2482,7 +2482,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -2526,12 +2526,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2542,7 +2542,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -2586,12 +2586,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2602,7 +2602,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -2646,12 +2646,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm4");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1004));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1004));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2662,7 +2662,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -2706,12 +2706,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2722,7 +2722,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -2766,12 +2766,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2782,7 +2782,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
@@ -2826,12 +2826,12 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -2842,7 +2842,7 @@ class OO11_MaterialExpenseTest_record extends MaterialExpenseActionTest {
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
