@@ -29,7 +29,7 @@ import co.syscoop.soberano.util.SpringUtility;
 
 @Order(24)
 
-//@Disabled
+@Disabled
 
 @TestMethodOrder(OrderAnnotation.class)
 class OO24_StockTest_check_following_process_runs_ending extends StockActionTest {
@@ -107,7 +107,7 @@ class OO24_StockTest_check_following_process_runs_ending extends StockActionTest
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -173,7 +173,7 @@ class OO24_StockTest_check_following_process_runs_ending extends StockActionTest
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
