@@ -29,7 +29,7 @@ import co.syscoop.soberano.util.SpringUtility;
 
 @Order(30)
 
-//@Disabled
+@Disabled
 
 @TestMethodOrder(OrderAnnotation.class)
 class OO30_StockTest_check_following_order_closing extends StockActionTest {
@@ -107,7 +107,7 @@ class OO30_StockTest_check_following_order_closing extends StockActionTest {
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -179,7 +179,7 @@ class OO30_StockTest_check_following_order_closing extends StockActionTest {
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -257,7 +257,7 @@ class OO30_StockTest_check_following_order_closing extends StockActionTest {
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1008));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1008));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -319,7 +319,7 @@ class OO30_StockTest_check_following_order_closing extends StockActionTest {
 //									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 //									(desktop.query("grid").query("#grd")).as(Grid.class));
 //			
-//			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1009));
+//			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1009));
 //			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 //										//cmbWarehouse's onChange event isn't triggered under testing
 //			
