@@ -37,7 +37,7 @@ import co.syscoop.soberano.util.SpringUtility;
 
 @Order(32)
 
-//@Disabled
+@Disabled
 
 @TestMethodOrder(OrderAnnotation.class)
 class OO32_MaterialExpenseTest_record_cancelled_expense_again extends MaterialExpenseActionTest {
@@ -96,12 +96,12 @@ class OO32_MaterialExpenseTest_record_cancelled_expense_again extends MaterialEx
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1002));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm6");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1006));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1006));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -112,7 +112,7 @@ class OO32_MaterialExpenseTest_record_cancelled_expense_again extends MaterialEx
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1001));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -154,12 +154,12 @@ class OO32_MaterialExpenseTest_record_cancelled_expense_again extends MaterialEx
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm7");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1007));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1007));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -170,7 +170,7 @@ class OO32_MaterialExpenseTest_record_cancelled_expense_again extends MaterialEx
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1002));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "abc123");
 			
@@ -212,12 +212,12 @@ class OO32_MaterialExpenseTest_record_cancelled_expense_again extends MaterialEx
 			ComponentAgent cmbProviderAgent = desktop.query("textbox").query("#cmbProvider");
 			InputAgent cmbProviderInputAgent = cmbProviderAgent.as(InputAgent.class);
 			cmbProviderInputAgent.typing("mprov1");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), new Integer(1001));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbProvider(), Integer.valueOf(1001));
 			
 			ComponentAgent cmbMaterialAgent = desktop.query("textbox").query("#cmbMaterial");
 			InputAgent cmbMaterialInputAgent = cmbMaterialAgent.as(InputAgent.class);
 			cmbMaterialInputAgent.typing("mm2");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), new Integer(1002));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbMaterial(), Integer.valueOf(1002));
 			cmbMaterialAgent.click(); 	//needed to force cmbUnit population. 
 										//cmbMaterial's onChange event isn't triggered under testing
 			
@@ -228,7 +228,7 @@ class OO32_MaterialExpenseTest_record_cancelled_expense_again extends MaterialEx
 			ComponentAgent cmbCurrencyAgent = desktop.query("textbox").query("#cmbCurrency");
 			InputAgent cmbCurrencyInputAgent = cmbCurrencyAgent.as(InputAgent.class);
 			cmbCurrencyInputAgent.typing("mc3");
-			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), new Integer(1003));
+			materialExpenseForm.setComponentValue(materialExpenseForm.getCmbCurrency(), Integer.valueOf(1003));
 			
 			materialExpenseForm.setComponentValue(materialExpenseForm.getTxtReference(), "");
 			
