@@ -34,7 +34,7 @@ import co.syscoop.soberano.util.SpringUtility;
 
 @Order(37)
 
-//@Disabled
+@Disabled
 
 @TestMethodOrder(OrderAnnotation.class)
 class OO37_StockTest_check_following_order_reopening_and_recollecting extends StockActionTest {
@@ -112,7 +112,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -148,7 +148,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -184,7 +184,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -220,7 +220,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -256,7 +256,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -292,7 +292,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -328,7 +328,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1006));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1006));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -364,7 +364,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -400,7 +400,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -436,7 +436,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -472,7 +472,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -508,7 +508,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -544,7 +544,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -580,7 +580,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -616,7 +616,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1010));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1010));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -652,7 +652,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 									(desktop.query("grid").query("#grd")).as(Grid.class));
 			
-			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1008));
+			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1008));
 			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 										//cmbWarehouse's onChange event isn't triggered under testing
 			
@@ -713,7 +713,7 @@ class OO37_StockTest_check_following_order_reopening_and_recollecting extends St
 //									(desktop.query("#wndContentPanel").query("#cmbWarehouse")).as(Combobox.class),
 //									(desktop.query("grid").query("#grd")).as(Grid.class));
 //			
-//			stockForm.setComponentValue(stockForm.getCmbWarehouse(), new Integer(1009));
+//			stockForm.setComponentValue(stockForm.getCmbWarehouse(), Integer.valueOf(1009));
 //			cmbWarehouseAgent.click(); 	//needed to force grid updating. 
 //										//cmbWarehouse's onChange event isn't triggered under testing
 //			
